[gd_scene load_steps=42 format=3 uid="uid://ddvkgmui35jl2"]

[ext_resource type="Script" path="res://scripts/shell.gd" id="1_1umma"]
[ext_resource type="Script" path="res://scripts/ControllerHandler.gd" id="2_o13ks"]
[ext_resource type="PackedScene" uid="uid://b4kad2kuba1yn" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_hand_low.tscn" id="3_mmafi"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="4_m7mcb"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="5_bmhao"]
[ext_resource type="PackedScene" uid="uid://l2n30mpbkdyw" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_hand_low.tscn" id="6_48att"]
[ext_resource type="Script" path="res://scripts/label3d_dmm.gd" id="7_8bnts"]
[ext_resource type="Script" path="res://scripts/AlignmentContainer3D.gd" id="8_f3fj4"]
[ext_resource type="Script" path="res://scenes/ExperienceManager.gd" id="9_hitd4"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.gd" id="10_1vr8y"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d_body.gd" id="11_57o0r"]
[ext_resource type="Texture2D" uid="uid://1x8d3eke6bej" path="res://assets/icons/icon_ok.png" id="12_ftu11"]
[ext_resource type="Texture2D" uid="uid://cjfcws6wxhnwy" path="res://assets/icons/icon_send.png" id="13_pu2iy"]
[ext_resource type="Script" path="res://scripts/SelfDisableButton.gd" id="14_5wif5"]
[ext_resource type="Texture2D" uid="uid://bfhxeuhx18wiu" path="res://assets/icons/icon_start.png" id="15_pyq0w"]
[ext_resource type="Script" path="res://scripts/Fetch.gd" id="16_3vpv5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_khxxh"]
transparency = 1
albedo_color = Color(0.368627, 0.486275, 1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wc060"]
transparency = 1
albedo_color = Color(0.368627, 0.486275, 1, 1)

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_0rulv"]
ground_color = Color(0.709804, 0.92549, 0.972549, 1)
energy_multiplier = 4.83

[sub_resource type="Sky" id="Sky_3nj16"]
sky_material = SubResource("PhysicalSkyMaterial_0rulv")

[sub_resource type="Environment" id="Environment_fi6uc"]
background_mode = 2
sky = SubResource("Sky_3nj16")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ws011"]
resource_local_to_scene = true
shading_mode = 0

[sub_resource type="BoxMesh" id="BoxMesh_xef3g"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_ws011")
size = Vector3(3.59, 0.45, 0.05)

[sub_resource type="LabelSettings" id="LabelSettings_nwrua"]
font_size = 30

[sub_resource type="QuadMesh" id="QuadMesh_4dfsu"]
resource_local_to_scene = true
size = Vector2(3.2, 0.9)

[sub_resource type="ViewportTexture" id="ViewportTexture_mfpns"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wjys1"]
transparency = 1
cull_mode = 2
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_mfpns")
texture_filter = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_fvxde"]
resource_local_to_scene = true
size = Vector3(3.2, 0.9, 0.02)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0df62"]
bg_color = Color(0, 0, 0, 0.556863)

[sub_resource type="ViewportTexture" id="ViewportTexture_kv4je"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4iibo"]
transparency = 1
cull_mode = 2
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_kv4je")
texture_filter = 1

[sub_resource type="Animation" id="Animation_8hfeq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Viewport/Control/Panel:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.556863)]
}

[sub_resource type="Animation" id="Animation_yfma1"]
resource_name = "blink_green"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Viewport/Control/Panel:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 4.59479, 0.183011),
"update": 0,
"values": [Color(0, 0, 0, 0.588235), Color(0, 0.662745, 0.0901961, 0.705882), Color(0, 0, 0, 0.588235)]
}

[sub_resource type="Animation" id="Animation_q8st5"]
resource_name = "blink"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Viewport/Control/Panel:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 4.59479, 0.183011),
"update": 0,
"values": [Color(0, 0, 0, 0.588235), Color(1, 0.12549, 0.0862745, 0.705882), Color(0, 0, 0, 0.588235)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5cclt"]
_data = {
"RESET": SubResource("Animation_8hfeq"),
"blink_green": SubResource("Animation_yfma1"),
"blink_red": SubResource("Animation_q8st5")
}

[sub_resource type="QuadMesh" id="QuadMesh_fycao"]
resource_local_to_scene = true
size = Vector2(3, 2)

[sub_resource type="ViewportTexture" id="ViewportTexture_3x0g5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pbfw7"]
transparency = 1
cull_mode = 2
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_3x0g5")
texture_filter = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_nnfl2"]
resource_local_to_scene = true
size = Vector3(3, 2, 0.02)

[sub_resource type="ViewportTexture" id="ViewportTexture_wevru"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v38po"]
transparency = 1
cull_mode = 2
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_wevru")
texture_filter = 1

[node name="Study Shell" type="Node3D"]
script = ExtResource("1_1umma")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.76039, 11.7752)
current = true

[node name="Left Hand" type="XRController3D" parent="XROrigin3D"]
tracker = &"left_hand"
script = ExtResource("2_o13ks")

[node name="Hand" parent="XROrigin3D/Left Hand" instance=ExtResource("3_mmafi")]
hand_material_override = SubResource("StandardMaterial3D_khxxh")

[node name="FunctionPickup" parent="XROrigin3D/Left Hand" instance=ExtResource("4_m7mcb")]

[node name="FunctionPointer" parent="XROrigin3D/Left Hand" instance=ExtResource("5_bmhao")]

[node name="Right Hand" type="XRController3D" parent="XROrigin3D"]
tracker = &"right_hand"
script = ExtResource("2_o13ks")

[node name="Hand" parent="XROrigin3D/Right Hand" instance=ExtResource("6_48att")]
hand_material_override = SubResource("StandardMaterial3D_wc060")

[node name="FunctionPickup" parent="XROrigin3D/Right Hand" instance=ExtResource("4_m7mcb")]
grab_distance = 0.0
ranged_distance = 20.0

[node name="FunctionPointer" parent="XROrigin3D/Right Hand" instance=ExtResource("5_bmhao")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_fi6uc")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.797868, 0.602832, 0, -0.602832, 0.797868, 0, 22.4567, -62.4577)
shadow_enabled = true

[node name="TestWord" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 4.76837e-07, 10.4418, -18.2714)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="TestWord"]
mesh = SubResource("BoxMesh_xef3g")
skeleton = NodePath("")

[node name="Label3DDMM" type="Label3D" parent="TestWord"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0871048)
pixel_size = 0.012
modulate = Color(0, 0, 0, 1)
outline_modulate = Color(1, 1, 1, 0)
text = "Test test"
font_size = 33
autowrap_mode = 2
script = ExtResource("7_8bnts")
intended_viewing_distance = 12.0

[node name="StartPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.269, -0.565)
script = ExtResource("8_f3fj4")
extend = 2.0
is_horizontal = true
center_children = true
use_child_height = null

[node name="ExperienceManager" type="Node3D" parent="."]
script = ExtResource("9_hitd4")
test_words = Array[String](["Sauerkraut", "Currywurst", "Süßkartoffeln", "Sellerie", "Butterspätzle", "Lasagne", "Granatapfel", "Brokkoli", "Nudelsuppe", "Flammenkuchen", "Spinat", "Petersilie", "Koriander", "Seelachs", "Grillhähnchen", "Cheeseburger", "Gewürzgurke"])

[node name="UserTask2DScreen" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.60537, -3)
script = ExtResource("10_1vr8y")
screen_size = Vector2(3.2, 0.9)
viewport_size = Vector2(640, 180)

[node name="Viewport" type="SubViewport" parent="UserTask2DScreen"]
disable_3d = true
transparent_bg = true
gui_embed_subwindows = true
size = Vector2i(640, 180)
render_target_update_mode = 1

[node name="Control" type="Control" parent="UserTask2DScreen/Viewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UserTask2DScreen/Viewport/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UserTask2DScreen/Viewport/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "To proof: Roses are red, violets are blue."
label_settings = SubResource("LabelSettings_nwrua")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Screen" type="MeshInstance3D" parent="UserTask2DScreen"]
mesh = SubResource("QuadMesh_4dfsu")
surface_material_override/0 = SubResource("StandardMaterial3D_wjys1")

[node name="StaticBody3D" type="StaticBody3D" parent="UserTask2DScreen"]
collision_layer = 1048577
collision_mask = 0
script = ExtResource("11_57o0r")
screen_size = Vector2(3.2, 0.9)
viewport_size = Vector2(640, 180)

[node name="CollisionShape3D" type="CollisionShape3D" parent="UserTask2DScreen/StaticBody3D"]
shape = SubResource("BoxShape3D_fvxde")

[node name="UserInfo2DScreen" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.50537, -3)
script = ExtResource("10_1vr8y")
screen_size = Vector2(3.2, 0.9)
viewport_size = Vector2(640, 180)

[node name="Viewport" type="SubViewport" parent="UserInfo2DScreen"]
disable_3d = true
transparent_bg = true
gui_embed_subwindows = true
size = Vector2i(640, 180)
render_target_update_mode = 1

[node name="Control" type="Control" parent="UserInfo2DScreen/Viewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UserInfo2DScreen/Viewport/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0df62")

[node name="Label" type="Label" parent="UserInfo2DScreen/Viewport/Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "This view is not targeted at VR.
Please switch to the targeted view."
label_settings = SubResource("LabelSettings_nwrua")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Screen" type="MeshInstance3D" parent="UserInfo2DScreen"]
mesh = SubResource("QuadMesh_4dfsu")
surface_material_override/0 = SubResource("StandardMaterial3D_4iibo")

[node name="StaticBody3D" type="StaticBody3D" parent="UserInfo2DScreen"]
collision_layer = 1048577
collision_mask = 0
script = ExtResource("11_57o0r")
screen_size = Vector2(3.2, 0.9)
viewport_size = Vector2(640, 180)

[node name="CollisionShape3D" type="CollisionShape3D" parent="UserInfo2DScreen/StaticBody3D"]
shape = SubResource("BoxShape3D_fvxde")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UserInfo2DScreen"]
libraries = {
"": SubResource("AnimationLibrary_5cclt")
}

[node name="UserMenu2DScreen" type="Node3D" parent="."]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 2.98725, 2.05537, -1.74719)
script = ExtResource("10_1vr8y")

[node name="Viewport" type="SubViewport" parent="UserMenu2DScreen"]
disable_3d = true
transparent_bg = true
gui_embed_subwindows = true
size = Vector2i(300, 200)
render_target_update_mode = 1

[node name="Control" type="Control" parent="UserMenu2DScreen/Viewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UserMenu2DScreen/Viewport/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserMenu2DScreen/Viewport/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CheckButton" type="Button" parent="UserMenu2DScreen/Viewport/Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 39
text = "Checken"
icon = ExtResource("12_ftu11")
expand_icon = true

[node name="Separator" type="HSeparator" parent="UserMenu2DScreen/Viewport/Control/Panel/VBoxContainer"]
visible = false
layout_mode = 2

[node name="SubmitButton" type="Button" parent="UserMenu2DScreen/Viewport/Control/Panel/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 39
text = "Senden"
icon = ExtResource("13_pu2iy")
expand_icon = true
script = ExtResource("14_5wif5")

[node name="Screen" type="MeshInstance3D" parent="UserMenu2DScreen"]
mesh = SubResource("QuadMesh_fycao")
surface_material_override/0 = SubResource("StandardMaterial3D_pbfw7")

[node name="StaticBody3D" type="StaticBody3D" parent="UserMenu2DScreen"]
collision_layer = 1048577
collision_mask = 0
script = ExtResource("11_57o0r")
viewport_size = Vector2(300, 200)

[node name="CollisionShape3D" type="CollisionShape3D" parent="UserMenu2DScreen/StaticBody3D"]
shape = SubResource("BoxShape3D_nnfl2")

[node name="UserStart2DScreen" type="Node3D" parent="."]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, -2.987, 2.05537, -1.747)
script = ExtResource("10_1vr8y")

[node name="Viewport" type="SubViewport" parent="UserStart2DScreen"]
disable_3d = true
transparent_bg = true
gui_embed_subwindows = true
size = Vector2i(300, 200)
render_target_update_mode = 1

[node name="Control" type="Control" parent="UserStart2DScreen/Viewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="UserStart2DScreen/Viewport/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="UserStart2DScreen/Viewport/Control/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 63
text = "Start"
icon = ExtResource("15_pyq0w")
expand_icon = true
script = ExtResource("14_5wif5")

[node name="Screen" type="MeshInstance3D" parent="UserStart2DScreen"]
mesh = SubResource("QuadMesh_fycao")
surface_material_override/0 = SubResource("StandardMaterial3D_v38po")

[node name="StaticBody3D" type="StaticBody3D" parent="UserStart2DScreen"]
collision_layer = 1048577
collision_mask = 0
script = ExtResource("11_57o0r")
viewport_size = Vector2(300, 200)

[node name="CollisionShape3D" type="CollisionShape3D" parent="UserStart2DScreen/StaticBody3D"]
shape = SubResource("BoxShape3D_nnfl2")

[node name="HTTPRequest" type="HTTPRequest" parent="." node_paths=PackedStringArray("experience_manager")]
script = ExtResource("16_3vpv5")
experience_manager = NodePath("../ExperienceManager")
test_json = "{
    \"platform\": \"VR\",
    \"surveyId\": \"demographics\",
    \"stateId\": 2,
    \"toProof\": \"Beweise: Alle Weintrinker sind rothaarig\",
    \"statements\": [
        {
            \"text\": \"alle Weintrinker sind 20 Jahre alt\",
            \"correct\": false
        },
        {
            \"text\": \"alle Weintrinker sind irisch\",
            \"correct\": true
        },
        {
            \"text\": \"alle Weintrinker wohnen in potsdam\",
            \"correct\": true
        },
        {
            \"text\": \"alle potsdamer sind klein\",
            \"correct\": true
        },
        {
            \"text\": \"alle iren haben große füße\",
            \"correct\": true
        },
        {
            \"text\": \"alle potsdamer, die große füße haben, sind abenteuerlustig\",
            \"correct\": true
        },
        {
            \"text\": \"alle potsdamer, die große füße haben und drei füße haben, sind irisch\",
            \"correct\": false
        },
        {
            \"text\": \"alle iren sind reich\",
            \"correct\": false
        },
        {
            \"text\": \"alle abenteuerlustigen, die medizin studieren, sind rothaarig\",
            \"correct\": false
        },
        {
            \"text\": \"alle münsteraner studieren medizin\",
            \"correct\": false
        },
        {
            \"text\": \"alle briten sind münsteraner\",
            \"correct\": false
        },
        {
            \"text\": \"alle abenteuerlustigen, die klein sind, sind rothaarig\",
            \"correct\": true
        }
    ],
    \"arrangeable\": true,
    \"forceRestart\": false,
	\"leftHand\": false
}"

[connection signal="pointer_moved" from="UserTask2DScreen/StaticBody3D" to="UserTask2DScreen/StaticBody3D" method="_on_pointer_moved" flags=18]
[connection signal="pointer_pressed" from="UserTask2DScreen/StaticBody3D" to="UserTask2DScreen/StaticBody3D" method="_on_pointer_pressed" flags=18]
[connection signal="pointer_released" from="UserTask2DScreen/StaticBody3D" to="UserTask2DScreen/StaticBody3D" method="_on_pointer_released" flags=18]
[connection signal="pointer_moved" from="UserInfo2DScreen/StaticBody3D" to="UserInfo2DScreen/StaticBody3D" method="_on_pointer_moved" flags=18]
[connection signal="pointer_pressed" from="UserInfo2DScreen/StaticBody3D" to="UserInfo2DScreen/StaticBody3D" method="_on_pointer_pressed" flags=18]
[connection signal="pointer_released" from="UserInfo2DScreen/StaticBody3D" to="UserInfo2DScreen/StaticBody3D" method="_on_pointer_released" flags=18]
[connection signal="button_down" from="UserMenu2DScreen/Viewport/Control/Panel/VBoxContainer/CheckButton" to="ExperienceManager" method="_on_check_button_button_down"]
[connection signal="button_down" from="UserMenu2DScreen/Viewport/Control/Panel/VBoxContainer/SubmitButton" to="ExperienceManager" method="_on_submit_button_button_down"]
[connection signal="button_down" from="UserMenu2DScreen/Viewport/Control/Panel/VBoxContainer/SubmitButton" to="HTTPRequest" method="_on_submit_button_button_down"]
[connection signal="pointer_moved" from="UserMenu2DScreen/StaticBody3D" to="UserMenu2DScreen/StaticBody3D" method="_on_pointer_moved" flags=18]
[connection signal="pointer_pressed" from="UserMenu2DScreen/StaticBody3D" to="UserMenu2DScreen/StaticBody3D" method="_on_pointer_pressed" flags=18]
[connection signal="pointer_released" from="UserMenu2DScreen/StaticBody3D" to="UserMenu2DScreen/StaticBody3D" method="_on_pointer_released" flags=18]
[connection signal="button_down" from="UserStart2DScreen/Viewport/Control/Panel/StartButton" to="ExperienceManager" method="_on_start_button_button_down"]
[connection signal="pointer_moved" from="UserStart2DScreen/StaticBody3D" to="UserStart2DScreen/StaticBody3D" method="_on_pointer_moved" flags=18]
[connection signal="pointer_pressed" from="UserStart2DScreen/StaticBody3D" to="UserStart2DScreen/StaticBody3D" method="_on_pointer_pressed" flags=18]
[connection signal="pointer_released" from="UserStart2DScreen/StaticBody3D" to="UserStart2DScreen/StaticBody3D" method="_on_pointer_released" flags=18]
[connection signal="request_completed" from="HTTPRequest" to="HTTPRequest" method="_on_request_completed"]
